Time: 4 ms (8.44%), Space: 44 MB (7.38%) - LeetHub